<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imageView_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dgu_map">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_weight="4"
                android:id="@+id/spinner_src"
                android:layout_width="0dp"
                android:layout_height="50dp"/>

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:src="@drawable/right_arrow">

            </ImageView>

            <Spinner
                android:layout_weight="4"
                android:id="@+id/spinner_dest"
                android:layout_width="0dp"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/ok">
            </Button>

        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center"
                android:id="@+id/textView_time"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/prediction_time">

            </TextView>

            <TextView
                android:gravity="center"
                android:id="@+id/textView_distance"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/distance">

            </TextView>

            <TextView
                android:gravity="center"
                android:id="@+id/textView_calorie"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/calorie">

            </TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>