<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#C8F0ED"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/mon"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_distance_mon"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_calorie_mon"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#C8F0ED"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tue"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_distance_tue"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_calorie_tue"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#C8F0ED"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/wed"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_distance_wed"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_calorie_wed"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#C8F0ED"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/thu"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_distance_thu"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_calorie_thu"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#C8F0ED"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/fri"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_distance_fri"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:id="@+id/prediction_calorie_fri"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/calorie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>